# Test_1_FastAPI

./: .env  Dockerfile  README  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/data_base/: __init__.py  db_connect.py  db_interractions.py  db_utils.py
app/data_base/db_ interactions/: autror_CRUD.py
app/models/: __init__.py  models.py  schemas.py
app/routers/: CRUD_router.py  CRUD_routers.py  api_routers.py  author_CRUD_router.py  book_CRUD_router.py  borrows_CRUD_router.py
app/utils/: CRUD_creater.py  CRUD_router.py  __init__.py
migrations/: env.py
migrations/versions/: c9b076af8879_initial_migration.py
tests/: conftest.py  test_routers.py
